--- a/advertisement_management/pom.xml
+++ b/advertisement_management/pom.xml
@@ -55,6 +55,12 @@
       <artifactId>thymeleaf</artifactId>
       <version>3.1.2.RELEASE</version> <!-- 请根据需要选择合适的版本 -->
     </dependency>
+    <!--引入加密-->
+    <dependency>
+      <groupId>at.favre.lib</groupId>
+      <artifactId>bcrypt</artifactId>
+      <version>0.10.2</version>
+    </dependency>
     <dependency>
       <groupId>org.thymeleaf</groupId>
       <artifactId>thymeleaf-spring6</artifactId>
