--- a/advertisement_management/pom.xml
+++ b/advertisement_management/pom.xml
@@ -15,6 +15,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>com.github.pagehelper</groupId>
+      <artifactId>pagehelper</artifactId>
+      <version>6.1.0</version>
+    </dependency>
+    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-aop</artifactId>
       <version>6.1.8</version> <!-- 确保版本与你的 Spring 版本匹配 -->
