--- a/advertisement_management/.gitignore
+++ b/advertisement_management/.gitignore
@@ -30,7 +30,7 @@ target/
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
-
+/src/main/resources/config.properties
 ### VS Code ###
 .vscode/
 
