--- a/advertisement_management/pom.xml
+++ b/advertisement_management/pom.xml
@@ -128,6 +128,14 @@
       <artifactId>jakarta.annotation-api</artifactId>
       <version>2.1.1</version>
     </dependency>
+
+    <!-- java_python驱动 -->
+    <dependency>
+      <groupId>org.python</groupId>
+      <artifactId>jython-standalone</artifactId>
+      <version>2.7.0</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>advertisement_management</finalName>
