--- a/news/src/main/webapp/WEB-INF/web.xml
+++ b/news/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,5 @@
 ﻿<web-app>
     <welcome-file-list>
-        <welcome-file>login</welcome-file>
+        <welcome-file>mainPage</welcome-file>
     </welcome-file-list>
 </web-app>
