--- a/advertisement_management/pom.xml
+++ b/advertisement_management/pom.xml
@@ -136,6 +136,14 @@
       <version>2.7.0</version>
     </dependency>
 
+
+    <!--jackson-->
+      <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-databind</artifactId>
+          <version>2.18.2</version>
+      </dependency>
+
   </dependencies>
   <build>
     <finalName>advertisement_management</finalName>
