--- a/advertisement_management/pom.xml
+++ b/advertisement_management/pom.xml
@@ -136,6 +136,13 @@
       <version>2.7.0</version>
     </dependency>
 
+    <!-- RocketMQ 客户端依赖 -->
+    <dependency>
+      <groupId>org.apache.rocketmq</groupId>
+      <artifactId>rocketmq-client</artifactId>
+      <version>4.9.4</version>
+    </dependency>
+
 
     <!--jackson-->
       <dependency>
