--- a/advertisement_management/pom.xml
+++ b/advertisement_management/pom.xml
@@ -129,12 +129,6 @@
       <version>2.1.1</version>
     </dependency>
 
-    <!-- java_python驱动 -->
-    <dependency>
-      <groupId>org.python</groupId>
-      <artifactId>jython-standalone</artifactId>
-      <version>2.7.0</version>
-    </dependency>
 
     <!-- RocketMQ 客户端依赖 -->
     <dependency>
@@ -161,6 +155,7 @@
         <configuration>
           <source>17</source>
           <target>17</target>
+          <encoding>UTF-8</encoding>
           <compilerArgs>
             <arg>-parameters</arg>
           </compilerArgs>
