--- a/shopping_backend/requirements.txt
+++ b/shopping_backend/requirements.txt
@@ -1,7 +1,9 @@
-flask==1.1.4
-flask-sqlalchemy==2.5.1
-pymysql==1.1.1
-flask-cors==5.0.0
-markupsafe==2.0.1
+flask
+flask-sqlalchemy
+configparser
+pymysql
+flask-cors
+markupsafe
+mysqlclient
 gunicorn
 gevent
