--- a/shopping_frontend/package.json
+++ b/shopping_frontend/package.json
@@ -4,11 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host 0.0.0.0",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fingerprintjs/fingerprintjs": "^4.5.1",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "react": "^18.2.0",
